Updated virgo to 3.6.0M2 (windows support)